2014-01-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/57945
	* c-c++-common/torture/pr57945.c: New test.

2014-01-17  Zhenqiang Chen  <zhenqiang.chen@arm.com>

	* gcc.target/arm/its.c: New testcase.

2014-01-16  Jan Hubicka  <jh@suse.cz>

	PR ipa/59775
	* g++.dg/torture/pr59775.C: New testcase.

2014-01-16  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/58344
	* gcc.c-torture/compile/pr58344.c: New test.

	PR target/59839
	* gcc.target/i386/pr59839.c: New test.

	PR debug/54694
	* gcc.target/i386/pr9771-1.c (main): Rename to...
	(real_main): ... this.  Add __asm name "main".
	(ASMNAME, ASMNAME2, STRING): Define.

2014-01-16  Nick Clifton  <nickc@redhat.com>

	PR middle-end/28865
	* gcc.c-torture/compile/pr28865.c: New.
	* gcc.c-torture/execute/pr28865.c: New.

2014-01-16  Marek Polacek  <polacek@redhat.com>

	PR middle-end/59827
	* gcc.dg/pr59827.c: New test.

2014-01-16  Andreas Schwab  <schwab@linux-m68k.org>

	* gcc.c-torture/execute/pr59747.c (fn1): Return a value.

2014-01-15  Richard Henderson  <rth@redhat.com>

	PR debug/54694
	* gcc.target/i386/pr54694.c: New test.

2014-01-15  Laurent Alfonsi <laurent.alfonsi@st.com>

	PR c++/49718
	* g++.dg/pr49718.C: New test.

2014-01-15  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/umips-branch-4.c: Add addressing=absolute.

2014-01-15  Bill Schmidt  <wschmidt@vnet.linux.ibm.com>

	* gcc.dg/vmx/mult-even-odd.c: New.
	* gcc.dg/vmx/mult-even-odd-be-order.c: New.

2014-01-15  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	* lib/target-supports.exp (check_libcilkrts_available): Added an
	extern "C" if we are using C++ along with a function prototype.

2014-01-15  Jeff Law  <law@redhat.com>

	PR tree-optimization/59747
	* gcc.c-torture/execute/pr59747.c: New test.

2014-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59794
	* c-c++-common/convert-vec-1.c: Also prune ABI change for
	Linux/x86.
	* g++.dg/cpp0x/constexpr-53094-2.C: Likewise.
	* g++.dg/ext/attribute-test-1.C: Likewise.